all devices api
